# phonon-directshow

./: CMakeLists.txt
cmake/: FindPhonon.cmake
ds9/: CMakeLists.txt  ConfigureChecks.cmake  backend.cpp  backend.h  ds9.desktop  ds9.desktop.cmake  videorenderer_evr.cpp  videorenderer_vmr9.cpp  videowidget.h
src/: CMakeLists.txt  abstractvideorenderer.cpp  ds9.desktop.cmake  phonon-ds9.json.in  qaudiocdreader.cpp  videorenderer_soft.cpp  videowidget.cpp
